--- a/www/index.html
+++ b/www/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Canvas at Cornell</title>
-	<link rel="shortcut icon" href="/images/cornell/favicon.ico" type="image/vnd.microsoft.icon">
+    <title>Canvas at Cornell</title>
+    <link rel="shortcut icon" href="/images/cornell/favicon.ico" type="image/vnd.microsoft.icon">
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700,700i|Lato:300,400" rel="stylesheet">
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
@@ -48,7 +48,6 @@
             </form>
         </div>
     </div>
-
     <div id="brand" class="band">
         <header id="cu-header">
             <div class="cu45-helper"></div>
@@ -72,23 +71,26 @@
             <div class="flex">
                 <div id='notification' class="container-fluid">
                 </div>
+            </div>
         </header>
     </div>
-
     <div id="main-content" class="band">
         <main id="main" class="container-fluid aria-target" tabindex="-1">
             <div class="row">
                 <div id="sidebar-top" class="secondary">
-				<h2>Help & Support links</h2>
+                    <h2 class='mobile-hidden'>Help & Support links</h2>
                     <nav class="secondary-navigation mobile-expander" aria-label="Section Navigation">
                         <div class="">
                             <ul class="menu">
                                 <li class="current-menu-ancestor current-menu-parent">
                                     <ul class="sub-menu">
-										<li class="menu-item"><a href="https://community.canvaslms.com/community/answers/guides/">Search the Canvas Guides</a></li>										
-										<li class="menu-item"><a href="mailto:support@instructure.com">Support</a></li>
-										<li class="menu-item"><a href="https://teaching.cornell.edu/">Center for Teaching Innovation</a></li>
-										<li class="menu-item"><a href="https://it.cornell.edu/canvas/">Blackboard to Canvas Migration </a></li>
+                                        <li class="menu-item"><a href="https://community.canvaslms.com/community/answers/guides/">Search
+                                                the Canvas Guides</a></li>
+                                        <li class="menu-item"><a href="mailto:support@instructure.com">Support</a></li>
+                                        <li class="menu-item"><a href="https://teaching.cornell.edu/">Center for
+                                                Teaching Innovation</a></li>
+                                        <li class="menu-item"><a href="https://it.cornell.edu/canvas/">Blackboard to
+                                                Canvas Migration </a></li>
                                         <li class="menu-item"><a href="https://www.instructure.com/">About Canvas</a>
                                         </li>
                                     </ul>
@@ -96,10 +98,8 @@
                             </ul>
                         </div>
                     </nav>
-
                 </div>
                 <article id="main-article" class="primary impact">
-
                     <section>
                         <div class="primary">
                             <h2 class='h1'>Log Into <em>Canvas</em></h2>
@@ -113,13 +113,11 @@
                             <p>
                                 <a class='link-button' href='https://cornell.instructure.com/login/canvas'>Guest</a>
                             </p>
-                            </p>
-                            Help logging in
-                            <a href='#'>Canvas Terms of Use FAQ</a>
+                            <p>
+                                Help logging in
+                                <a href='#'>Canvas Terms of Use FAQ</a>
                             </p>
                         </div>
-
-
                         <h2>Cornell University Copyright Notification</h2>
                         <p>
                             The University expects that users of these services will in good faith post material in
@@ -129,91 +127,98 @@
                             this site will be used in a manner consistent with copyright law. I either have permission
                             to use the material or believe, after performing a "fair use" assessment, that it falls
                             within the "fair use" exception to the requirement of getting permission.
-                            <p>
-                                <h2>Academic Integrity </h2>
-                                <p>
-                                    Course materials posted on Canvas are intellectual property belonging to the
-                                    author.
-                                    Students are not permitted to buy or sell any course materials without the express
-                                    permission of the instructor. Such unauthorized behavior constitutes academic
-                                    misconduct.
-                                    <a href='http://cuinfo.cornell.edu/aic.cfm'>Code of Academic Integrity</a>
-                                </p>
-                                <h2>Report Student Academic Concerns </h2>
-                                <p>Please <a href=' https://data.arts.cornell.edu/faculty/sit/st_entrysearch.cfm'>inform</a>
-                                    your college about any students for whom you have academic concerns.
-                                    <h3>Policies & Guidelines</h3>
-                                    <ul>
-                                        <li><a href='https://www.dfa.cornell.edu/sites/default/files/policy/vol4_15.pdf'>Faculty
-                                                Guide to Copyright</a></li>
-                                        <li><a href='http://registrar.sas.cornell.edu/Faculty/studentinfo.html'>Use of
-                                                Student Data Guidelines</a></li>
-                                        <li><a href='#'>FERPA and Teaching with Technology</a></li>
-                                        <li><a href='https://it.cornell.edu/regulated-data-chart'>Guidelines for Using
-                                                Campus IT Services with Regulated Data</a></li>
-                                    </ul>
-                                </p>
-                                <h2>Security Notice</h2>
-                                <p>
-                                    To make sure that no one can connect to Canvas using your account, you must Logout
-                                    from Canvas and Exit/Quit the browser application.
-                                    Clearing Your <a href='http://www.cit.cornell.edu/services/identity/cuweblogin/more.html'>CUWebLogin
-                                        Credentials</a>
-                                </p>
+                        </p>
+                        <h2>Academic Integrity </h2>
+                        <p>
+                            Course materials posted on Canvas are intellectual property belonging to the
+                            author.
+                            Students are not permitted to buy or sell any course materials without the express
+                            permission of the instructor. Such unauthorized behavior constitutes academic
+                            misconduct.
+                            <a href='http://cuinfo.cornell.edu/aic.cfm'>Code of Academic Integrity</a>
+                        </p>
+                        <h2>Report Student Academic Concerns </h2>
+                        <p>
+                            Please <a href=' https://data.arts.cornell.edu/faculty/sit/st_entrysearch.cfm'>inform</a>
+                            your college about any students for whom you have academic concerns.
+                        </p>
+                        <h3>Policies & Guidelines</h3>
+                        <ul>
+                            <li><a href='https://www.dfa.cornell.edu/sites/default/files/policy/vol4_15.pdf'>Faculty
+                                    Guide to Copyright</a></li>
+                            <li><a href='http://registrar.sas.cornell.edu/Faculty/studentinfo.html'>Use of
+                                    Student Data Guidelines</a></li>
+                            <li><a href='#'>FERPA and Teaching with Technology</a></li>
+                            <li><a href='https://it.cornell.edu/regulated-data-chart'>Guidelines for Using
+                                    Campus IT Services with Regulated Data</a></li>
+                        </ul>
+                        <h2>Security Notice</h2>
+                        <p>
+                            To make sure that no one can connect to Canvas using your account, you must
+                            Logout
+                            from Canvas and Exit/Quit the browser application.
+                            Clearing Your <a href='http://www.cit.cornell.edu/services/identity/cuweblogin/more.html'>CUWebLogin
+                                Credentials</a>
+                        </p>
                     </section>
                 </article>
                 <div id="sidebar-bottom" class="secondary" role="complementary">
                     <div class="content-block">
                         <a href="#" class="contact-us light">Contact Us</a>
                     </div>
-					<div id=spotlight><!-- load dynamic content here --></div>
+                    <div id=spotlight>
+                        <!-- load dynamic content here -->
+                    </div>
                 </div><!-- end of side bar -->
+            </div><!-- end of row -->
         </main>
     </div>
-
-	<footer>
-		<div class="main-footer">
-			<div class="container-fluid sidebar-left">
-				<div class="row">
-					<div class="primary">
-						<div class="two-col padded footer-links">
-							<div>
-									<h3 class="h6">Additional Resources</h3>
-									<ul class="list-menu vertical">
-										<li>If you have a disability and are having trouble accessing information on this website or need materials in an alternate format, Contact <a href="mailto:web-accessibility@cornell.edu">web-accessibility@cornell.edu</a> for assistance.</li>
-									</ul>
-							</div>    
-							<div>
-									<h3 class="h6">FERPA / GDPR </h3>
-									<ul class="list-menu vertical">
-										<li>
-										<p>ligula, eu ullamcorper odio libero at ante. Vestibulum et elit ac massa bibendum blandit. Integer dignissim sapien nec orci vulputate, in venenatis metus aliquet.</p>
-										<p>Suspendisse placerat leo vel posuere bibendum. Nunc sagittis velit sit amet velit finibus molestie.</p>
-										</li>
-									</ul>
-							</div>  							    
-														                    
-						</div>
-
-					</div>
-					<div class="secondary">
-						<h2 class="h4">Canvas at Cornell</h2>
-						<p>Cornell University<br>Ithaca, NY 14853-6601</p>
-						<p><a class="link-block" href="mailto:canvas@cornell.edu">Contact Us</a></p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="sub-footer">
-			<div class="container-fluid sidebar-left">
-				<div class="row">
-					<div class="secondary">
-						<a href="https://www.cornell.edu">Cornell University &copy;2018</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</footer>
+    <footer>
+        <div class="main-footer">
+            <div class="container-fluid sidebar-left">
+                <div class="row">
+                    <div class="primary">
+                        <div class="two-col padded footer-links">
+                            <div>
+                                <h3 class="h6">Additional Resources</h3>
+                                <ul class="list-menu vertical">
+                                    <li>If you have a disability and are having trouble accessing information on this
+                                        website or need materials in an alternate format, Contact <a href="mailto:web-accessibility@cornell.edu">web-accessibility@cornell.edu</a>
+                                        for assistance.</li>
+                                </ul>
+                            </div>
+                            <div>
+                                <h3 class="h6">FERPA / GDPR </h3>
+                                <ul class="list-menu vertical">
+                                    <li>
+                                        <p>ligula, eu ullamcorper odio libero at ante. Vestibulum et elit ac massa
+                                            bibendum blandit. Integer dignissim sapien nec orci vulputate, in venenatis
+                                            metus aliquet.</p>
+                                        <p>Suspendisse placerat leo vel posuere bibendum. Nunc sagittis velit sit amet
+                                            velit finibus molestie.</p>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="secondary">
+                        <h2 class="h4">Canvas at Cornell</h2>
+                        <p>Cornell University<br>Ithaca, NY 14853-6601</p>
+                        <p><a class="link-block" href="mailto:canvas@cornell.edu">Contact Us</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="sub-footer">
+            <div class="container-fluid sidebar-left">
+                <div class="row">
+                    <div class="secondary">
+                        <a href="https://www.cornell.edu">Cornell University &copy;2018</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!-- jQuery and Contrib Components -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -224,12 +229,12 @@
     <script src="js/cwd_utilities.js"></script>
     <script src="js/cwd_slider.js"></script>
 
-	<!--dynamicly load and render spotlights & notification -->
-	<script src="js/service.js"></script>
-	<script src="js/views/spotlight.js"></script>
-	<script src="js/views/notification.js"></script>
-	<script src="js/index.js"></script>
-	
+    <!--dynamicly load and render spotlights & notification requires jQuery-->
+    <script src="js/services/service.js"></script>
+    <script src="js/views/spotlight.js"></script>
+    <script src="js/views/notification.js"></script>
+    <script src="js/index.js"></script>
+
 </body>
 
 </html>
