--- a/www/index.html
+++ b/www/index.html
@@ -119,19 +119,17 @@
                         <p>
                             The University expects that users of these services will in good faith post material in
                             compliance with copyright laws. If you have questions about the use of any material, please
-                            send mail to copyright@cornell.edu.
-                            To the best of my knowledge, I assert that all the copyrighted material that I will post on
-                            this site will be used in a manner consistent with copyright law. I either have permission
-                            to use the material or believe, after performing a "fair use" assessment, that it falls
-                            within the "fair use" exception to the requirement of getting permission.
+                            send mail to copyright@cornell.edu. To the best of my knowledge, I assert that all the
+                            copyrighted material that I will post on this site will be used in a manner consistent with
+                            copyright law. I either have permission to use the material or believe, after performing a
+                            "fair use" assessment, that it falls within the "fair use" exception to the requirement of
+                            getting permission.
                         </p>
                         <h2>Academic Integrity </h2>
                         <p>
-                            Course materials posted on Canvas are intellectual property belonging to the
-                            author.
+                            Course materials posted on Canvas are intellectual property belonging to the author.
                             Students are not permitted to buy or sell any course materials without the express
-                            permission of the instructor. Such unauthorized behavior constitutes academic
-                            misconduct.
+                            permission of the instructor. Such unauthorized behavior constitutes academic misconduct.
                             <a href='http://cuinfo.cornell.edu/aic.cfm'>Code of Academic Integrity</a>
                         </p>
                         <h2>Report Student Academic Concerns </h2>
@@ -143,18 +141,17 @@
                         <ul>
                             <li><a href='https://www.dfa.cornell.edu/sites/default/files/policy/vol4_15.pdf'>Faculty
                                     Guide to Copyright</a></li>
-                            <li><a href='http://registrar.sas.cornell.edu/Faculty/studentinfo.html'>Use of
-                                    Student Data Guidelines</a></li>
+                            <li><a href='http://registrar.sas.cornell.edu/Faculty/studentinfo.html'>Use of Student Data
+                                    Guidelines</a></li>
                             <li><a href='#'>FERPA and Teaching with Technology</a></li>
-                            <li><a href='https://it.cornell.edu/regulated-data-chart'>Guidelines for Using
-                                    Campus IT Services with Regulated Data</a></li>
+                            <li><a href='https://it.cornell.edu/regulated-data-chart'>Guidelines for Using Campus IT
+                                    Services with Regulated Data</a></li>
                         </ul>
                         <h2>Security Notice</h2>
                         <p>
-                            To make sure that no one can connect to Canvas using your account, you must
-                            Logout
-                            from Canvas and Exit/Quit the browser application.
-                            Clearing Your <a href='http://www.cit.cornell.edu/services/identity/cuweblogin/more.html'>CUWebLogin
+                            To make sure that no one can connect to Canvas using your account, you must Logout from
+                            Canvas and Exit/Quit the browser application. Clearing Your
+                            <a href='http://www.cit.cornell.edu/services/identity/cuweblogin/more.html'>CUWebLogin
                                 Credentials</a>
                         </p>
                     </section>
@@ -177,11 +174,14 @@
                     <div class="primary">
                         <div class="two-col padded footer-links">
                             <div>
-                                <h3 class="h6">Additional Resources</h3>
+                                <h3 class="h6">Additional Resources
+                                </h3>
                                 <ul class="list-menu vertical">
                                     <li>If you have a disability and are having trouble accessing information on this
-                                        website or need materials in an alternate format, Contact <a href="mailto:web-accessibility@cornell.edu">web-accessibility@cornell.edu</a>
-                                        for assistance.</li>
+                                        website or need materials in an alternate format, Contact
+                                        <a href="mailto:web-accessibility@cornell.edu">web-accessibility@cornell.edu</a>
+                                        for assistance.
+                                    </li>
                                 </ul>
                             </div>
                             <div>
@@ -190,9 +190,11 @@
                                     <li>
                                         <p>ligula, eu ullamcorper odio libero at ante. Vestibulum et elit ac massa
                                             bibendum blandit. Integer dignissim sapien nec orci vulputate, in venenatis
-                                            metus aliquet.</p>
+                                            metus aliquet.
+                                        </p>
                                         <p>Suspendisse placerat leo vel posuere bibendum. Nunc sagittis velit sit amet
-                                            velit finibus molestie.</p>
+                                            velit finibus molestie.
+                                        </p>
                                     </li>
                                 </ul>
                             </div>
@@ -220,12 +222,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/contrib/modernizr.js"></script>
 
-    <!-- CWD Components need for show hide search and side links-->
+    <!-- CWD Components need for show hide search and side links -->
     <script src="js/cwd.js"></script>
     <script src="js/cwd_utilities.js"></script>
-    <!--script src="js/cwd_slider.js"></script -->
+    <!-- script src="js/cwd_slider.js"></script -->
 
-    <!--dynamicly load and render spotlights(announcements) & notification requires jQuery-->
+    <!-- dynamicly load and render spotlights(announcements) & notification requires jQuery -->
     <script src="js/services/service.js"></script>
     <script src="js/views/spotlight.js"></script>
     <script src="js/views/notification.js"></script>
