--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,6 @@
     <!-- css needs clean up and reduction in size-->
     <link href="css/base.css" rel="stylesheet">
     <link href="css/cornell.css" rel="stylesheet">
-    <link href="css/cwd_slider.css" rel="stylesheet">
     <link href="css/cwd_utilities.css" rel="stylesheet">
     <link href="css/cti.css" rel="stylesheet">
     <link href="css/canvas.css" rel="stylesheet">
@@ -39,7 +38,7 @@
                 <div class="search-filters">
                     <h2 class="sr-only">Search Filters:</h2>
                     <input type="radio" id="cu-search-filter1" name="sitesearch" value="thissite" checked="checked">
-                    <label for="cu-search-filter1"><span class="sr-only">Search </span>This Site</label>
+                    <label for="cu-search-filter1"><span class="sr-only">Search </span>CTI Site</label>
                     <input type="radio" id="cu-search-filter2" name="sitesearch" value="cornell">
                     <label for="cu-search-filter2"><span class="sr-only">Search </span>Cornell</label>
                 </div>
@@ -218,14 +217,15 @@
             </div>
         </div>
     </footer>
+
     <!-- jQuery and Contrib Components -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- backward compatibity for old browsers -->
     <script src="js/contrib/modernizr.js"></script>
 
     <!-- CWD Components need for show hide search and side links -->
     <script src="js/cwd.js"></script>
     <script src="js/cwd_utilities.js"></script>
-    <!-- script src="js/cwd_slider.js"></script -->
 
     <!-- dynamicly load and render spotlights(announcements) & notification requires jQuery -->
     <script src="js/services/service.js"></script>
