--- a/www/index.html
+++ b/www/index.html
@@ -60,7 +60,7 @@
                     <nav id="utility-navigation" aria-label="Supplementary Navigation">
                         <ul class="list-menu links">
                             <li><a href="https://www.instructure.com/">About Us</a></li>
-                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="mailto:canvas@cornell.edu">Contact Us</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -159,7 +159,7 @@
                 </article>
                 <div id="sidebar-bottom" class="secondary" role="complementary">
                     <div class="content-block">
-                        <a href="#" class="contact-us light">Contact Us</a>
+                        <a href="mailto:canvas@cornell.edu" class="contact-us light">Contact Us</a>
                     </div>
                     <div id=spotlight>
                         <!-- load dynamic content here -->
